# cavoc-proto

./: .gitignore  .ocamlformat  README.md  STRUCTURE.md  cavoc.opam  common.js  dune-project  index.html  indextuto.html  test.code-workspace  todo
.github/workflows/: cd.yml  ci.yml  deploy.yaml
front/: help.md  index.html  indextuto.html  option_window.css  server.ml  style.css  tuto.css  win.css
lib/: actions.ml  bilts.ml  cps.ml  cps.mli  debug.ml  declaration.ml  declaration.mli  dune  eval_red.ml  focusing.ml  focusing.mli  generate_trace.ml  graph.ml  heap.ml  heap.mli  hislts.ml  interactive.ml  interpreter.ml  language.ml  language.mli  lexer.mll  logic.ml  logic.mli  lts.ml  monad.ml  monad.mli  moves.ml  moves.mli  namespan.ml  ogs.ml  ogs.mli  ogssig.ml  parser.mly  pmap.ml  pmap.mli  pogs.ml  pogs.mli  product_lts.ml  refML.ml  symb_red.ml  (+9 more)
lib/RefML/: declaration.ml  declaration.mli  dune  eval_red.ml  eval_red.mli  fnamectx.ml  focusing.ml  focusing.mli  heap.ml  heap.mli  ienv.ml  interpreter.ml  interpreter.mli  lexer.mll  logic.ml  logic.mli  memory.ml  names.ml  (+24 more)
test/: 1-simple-bool.ml  1-simple-bool.mli  2-simple-bool.ml  2-simple-bool.mli  3-simple-ho.ml  3-simple-ho.mli  4-simple-abstract-type.ml  4-simple-abstract-type.mli  5-counter.ml  5-counter.mli  6-ho.ml  6-ho.mli  7-no_visible.ml  8-wbsc.ml  8-wbsc.mli  dune  exception.ml  exception.mli  factorial.ml  higher_order.ml  higher_order.mli  isc.ml  isc.mli  let_polymorphism.ml  no_visible.ml  no_visible.mli  no_visible1.ml  polymorphic_identity.ml  private_counter.ml  private_counter.mli  private_counter.test  private_counter_signature.test  rec_diverge.ml  rec_diverge.mli  universal_type.ml  universal_type.mli  wbsc.ml  wbsc.mli  wbsc.test  wbsc_context.ml  (+7 more)
tuto/: dune  private_counter.ml  tuto1.json  tuto1.ml  tuto2.json  tuto2.ml  tuto2.mli  wbsc.ml
(+93 files in other folders)
